# 2048-solver

./: .build.sh.swp  .gen.cc.swp  .gitignore  2048.cc  2048.h  CMakeLists.txt  Makefile  README.md  \  build.sh  dbg.cc  dbg.h  defs.h  gen.c  gen.cc  hash_set.cc  hash_set.h  position.h  shuffle.cc  shuffle.h  test.cc
ancillary/: shuffle_test.c
include/: dbg.h
misc/: cpu-1.txt  perf_test_oct22.txt
src/: atlas.h  defs.h  main.cc  move_lut.cc  move_lut.h  position.cc  position.h  position_v.cc  rng.h  shuffle.cc  shuffle.h  test.cc
tests/: helper.cc  helper.h  test.cc
